syntax = "proto3";

option go_package = "github.com/devimteam/microgen/examples/usersvc/pb;pb";

package devimteam.proto;

import "google/protobuf/empty.proto";

service UserService {
	rpc CreateUser (CreateUser_Request) returns (string);
	rpc UpdateUser (UpdateUser_Request) returns (google.protobuf.Empty);
	rpc GetUser (string) returns (GetUser_Response);
	rpc FindUsers (google.protobuf.Empty) returns (FindUsers_Response);
	rpc CreateComment (CreateComment_Request) returns (string);
	rpc GetComment (string) returns (GetComment_Response);
	rpc GetUserComments (string) returns (GetUserComments_Response);
}

message CreateUser_Request {
	User user = 1;
}

message UpdateUser_Request {
	User user = 1;
}

message GetUser_Response {
	User user = 1;
}

message FindUsers_Response {
	repeated User results = 1;
}

message CreateComment_Request {
	Comment comment = 1;
}

message GetComment_Response {
	Comment comment = 1;
}

message GetUserComments_Response {
	repeated Comment list = 1;
}

message Comment {
	string id = 1;
	string text = 2;
}

message User {
	string id = 1;
	string name = 2;
	int64 gender = 3;
	repeated Comment comments = 4;
}
